--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-draggable": "^4.4.6",
     "react-hook-form": "^7.56.4",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-konva": "^19.0.4",
     "use-image": "^1.1.4"
