--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@azure/msal-browser": "^4.12.0",
     "@azure/msal-react": "^3.0.12",
+    "axios": "^1.10.0",
     "gsap": "^3.13.0",
     "konva": "^9.3.20",
     "lucide-react": "^0.511.0",
